blockml/test/errors/06_join_sql_where/e159/e159m.model
model: e159m
sql_always_where: ${b.dim}
joins:
- from_view: e159_one
  as: a

- join_view: e159_one
  as: b
  sql_on: ${a.dim5} = ${b.dim5}
  sql_where: ${a.unk} > 10    